k8s/applications/ai/moltbot/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: moltbot
  namespace: moltbot
  labels:
    app.kubernetes.io/name: moltbot
    app.kubernetes.io/part-of: ai
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - 'moltbot.peekoff.com'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: moltbot
          port: 18789
      timeouts:
        request: 0s
        backendRequest: 0s
